--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
+sudo: false
 language: ruby
 rvm:
   - 2.0.0
   - 2.1.0
   - 2.2.0
+bundler_args: --retry=3 --jobs=3
 script: bundle exec rspec spec
+notifications:
+  emails: false
