--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
   - 2.0.0
   - 2.1.0
   - 2.2.0
+  - 2.3.0-preview1
 bundler_args: --retry=3 --jobs=3
 script: bundle exec rspec spec
 notifications:
