--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,6 @@ bundler_args: --retry=3 --jobs=3
 script: bundle exec rspec spec
 notifications:
   emails: false
+matrix:
+  allow_failures:
+    - rvm: ruby-head
